# sarc-tool

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  gh-pages.sh  index.html  sarc.js
ci/: before_deploy.ps1  before_deploy.sh
js/: Cargo.toml  Makefile
js/src/: main.rs
nintendo-sarc/: Cargo.toml
nintendo-sarc/src/: encode.rs  lib.rs  parse.rs
src/: main.rs
src/sarc/: encode.rs  mod.rs  parse.rs
